// proto/observe_service.proto
syntax = "proto2";
package grpc_service;
option go_package = "./observer_service;observer_service";

import "google/protobuf/empty.proto";

// Define the service
service Observer {
  rpc StartObserver (StartRequest) returns (StartResponse);
  rpc StopObserver (StopRequest) returns (google.protobuf.Empty);
  rpc ListObservers (google.protobuf.Empty) returns (ListResponse);
  rpc GetObserverState (GetStateRequest) returns (GetStateResponse);
}

// Message definitions
message StartRequest {
  required AmberConfig amber_config = 1;
  required DexConfig dex_config = 2;
  required ArbitrageConfig arbitrage_config = 3;
}

message StartResponse {
  required string instance_id = 1;
}

message StopRequest {
  required string instance_id = 1;
}

message ListRequest {
  required string instance_id = 1;
}

message ListResponse {
  repeated ObserverInfo observers = 1;
}

message GetStateRequest {
  required string instance_id = 1;
}

message GetStateResponse {
  required int64 timestamp = 1;
  required ArbitrageState buy_on_dex = 2;
  required ArbitrageState sell_on_dex = 3;
}

message AmberConfig {
  required string exchange_type = 1; // Binance
  required AmberOrderBookConfig orderbook = 2;
  required double taker_fee = 3; // 0.00023
}

message DexConfig {
  required DexType dex_type = 1;
  required string amm_pool = 2;
  required string token_mint = 3;
  required uint64 slippage_bps = 4;
  optional uint32 max_array_size = 5;
}

message ArbitrageConfig {
  required double sol_amount = 1; // 1.0
}

message AmberOrderBookConfig {
  required string base_token = 1; // TRUMP
  required string quote_token = 2; // USDT
  optional string symbol_connector = 3; // '/'
  optional int32 ask_depth = 4;
  optional int32 bid_depth = 5;
}

message ObserverInfo {
  required string instance_id = 1;
  required DexType dex_type = 2;
}

message ArbitrageState {
  required double cex_base_quantity = 1;
  required double cex_base_fiat_amount = 2;
  required double cex_sol_quantity = 3;
  required double cex_sol_fiat_amount = 4;
  required double dex_base_amount = 5;
  required double dex_sol_amount = 6;
  required double profit_fiat_amount = 7;
}

enum DexType {
  RAY_AMM = 0;
  RAY_CLMM = 1;
}